@@ -1,1 +1,2 @@
 VOID:POINTER,UINT,UINT,UINT
+VOID:BOOLEAN,ENUM
