@@ -1,4 +1,7 @@
 
+2009-03-25 13:03 Ali aliov@xfce.org 
+	 * : Added xfpm-errors quark for the common errors
+
 2009-03-24 16:34 Ali aliov@xfce.org 
 	 * : Fix missing files in the POTFILES+rename the settings desktop file
 
